feat(backend): implement spring boot core with security and infrastructure integrations