@@ -1,123 +1,81 @@
 package com.example.TheBlog.config;
 
-
-import jakarta.servlet.http.HttpServletResponse;
+import com.example.TheBlog.utils.AppConstants;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.Ordered;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.authentication.logout.LogoutFilter;
-import org.springframework.security.web.authentication.logout.SecurityContextLogoutHandler;
-import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
-@EnableWebSecurity(debug = false)
+@EnableWebSecurity
 public class SecurityConfiguration {
+
     private final AuthenticationProvider authenticationProvider;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfiguration(
-            JwtAuthenticationFilter jwtAuthenticationFilter,
-            AuthenticationProvider authenticationProvider
-    ) {
-        this.authenticationProvider = authenticationProvider;
+    @Value("${CLIENT_URL:http://localhost:5173}")
+    private String clientUrl;
+
+    @Value("${BACKEND_URL:http://localhost:8080}")
+    private String backendUrl;
+
+    public SecurityConfiguration(JwtAuthenticationFilter jwtAuthenticationFilter,
+                                 AuthenticationProvider authenticationProvider) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.authenticationProvider = authenticationProvider;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-//                .cors()
-//                .and()
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
-//                .cors()
-//                .and()
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/posts/**").permitAll()
-                        .requestMatchers("/categories/**").permitAll()
-                        .requestMatchers("/posts/upload").authenticated()
+                        .requestMatchers(AppConstants.Api.AUTH_BASE).permitAll()
+                        .requestMatchers(AppConstants.Api.CATEGORIES_BASE).permitAll()
+                        .requestMatchers(AppConstants.Api.POST_UPLOAD).authenticated()
+                        .requestMatchers(AppConstants.Api.POSTS_BASE).permitAll()
+                        .anyRequest().authenticated()
                 )
-//                .addFilter(corsFilterForLogout())
-//                .logout(
-//                        logout -> {
-//                                logout
-////                                .logoutUrl("/auth/logout")
-//                                .addLogoutHandler(new SecurityContextLogoutHandler())
-//                                .logoutSuccessHandler((request, response, authentication) -> {
-//                                    response.setStatus(HttpServletResponse.SC_OK);
-//                                }).permitAll();
-//                        }
-//                )
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-//    @Bean
-//    public CorsFilter corsFilterForLogout() {
-//        CorsConfiguration config = new CorsConfiguration();
-//        config.setAllowedOrigins(List.of("${CLIENT_URL}", "${BACKEND_URL}", "http://localhost:8080", "http://localhost:5173"));
-//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-//        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/auth/logout", config);
-//
-//        return new CorsFilter(source);
-//    }
-//
-//    @Bean
-//    public CorsFilter corsFilter() {
-//        CorsConfiguration config = new CorsConfiguration();
-//        config.setAllowedOrigins(List.of("${CLIENT_URL}", "${BACKEND_URL}", "http://localhost:8080", "http://localhost:5173*"));
-//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-////        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", config);
-//
-//        return new CorsFilter(source);
-//    }
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("${CLIENT_URL}", "${BACKEND_URL}", "http://localhost:8080", "http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        List<String> origins = new ArrayList<>();
+        origins.add(clientUrl);
+        origins.add(backendUrl);
+        origins.add("http://localhost:8080");
+        origins.add("http://localhost:5173");
+        configuration.setAllowedOrigins(origins);
+        configuration.setAllowedMethods(List.of(AppConstants.Security.ALLOWED_METHODS));
+        configuration.setAllowedHeaders(Arrays.asList(
+                AppConstants.Security.AUTH_HEADER,
+                AppConstants.Security.CONTENT_TYPE_HEADER
+        ));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
